# carbon-txt-validator

./: .env.dist  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  justfile  pyproject.toml  pytest.ini  test_toml.py
.github/workflows/: ci.yml  release.yml  run-deploy.yml  run-staging-deploy.yml
ansible/inventories/: prod.yml
ansible/playbooks/: deploy.yml  staging-deploy.yml
ansible/playbooks/templates/: carbon_txt_api_dotenv.sh.j2  carbon_txt_api_local_config.py.j2  run_carbon_txt_api.sh.j2  systemd.carbon_txt_api.service.j2
docs/: architecture.md  conf.py  contributing.md  csrd_checker.py  csrd_exploration.py  deployment.md  extending_with_plugins.md  index.md  installation.md  notebook.py  plugin_hooks.md  plugins.md  readme.md  runbook.md  usage.md  using_plugins.md
docs/adrs/: 01_adding_plugins_with_pluggy.md  02_improvements_to_delegation_and_domain_validation.md  03_change_of_lookup_priority_order.md  04_on_the_www_subdomain_and_the_difficulty_of_going_our_own_way_on_delegation.md  05_optional_dependencies.md
docs/csrd/: Annex-1-ESRS-Set1-XBRL-Taxonomy-illustrated-in-Excel.xlsx
docs/notebooks/: carbon_txt_checker_api_checker.py  csrd_checker.py
scripts/: verify_extras.py
src/carbon_txt/: __init__.py  cli.py  exceptions.py  finders.py  hookspecs.py  http_client.py  log_config.py  parsers_toml.py  plugins.py  process_ai_model_card.py  process_csrd_document.py  processors.py  schemas.py  validators.py
src/carbon_txt/processors/: __init__.py  ai_model_card.py  csrd_document.py
src/carbon_txt/schemas/: __init__.py  common.py  version_0_2.py  version_0_3.py  version_0_4.py  version_0_5.py
src/carbon_txt/web/: api.py  api_key_auth.py  db.sqlite3  manage.py  throttling.py
src/carbon_txt/web/config/: api.py  asgi.py  urls.py  wsgi.py
src/carbon_txt/web/config/settings/: base.py  development.py  production.py  test.py
src/carbon_txt/web/middleware/: __init__.py  add_trailing_slash.py  log_requested_domain.py
src/carbon_txt/web/validation_logging/: middleware.py  models.py
src/carbon_txt/web/validation_logging/migrations/: 0001_initial.py  0002_validationlogentry_source.py  0002_validationlogentry_source_and_more.py  0003_alter_validationlogentry_endpoint.py  0003_validationlogentry_username.py
src/carbon_txt_validator/: __init__.py  cli.py  finders.py  parsers_toml.py  schemas.py
src/carbon_txt_validator/web/: manage.py  middleware.py
src/carbon_txt_validator/web/config/: api.py  asgi.py  urls.py  wsgi.py
src/carbon_txt_validator/web/config/settings/: base.py  development.py  production.py  test.py
tests/: api_external.py  conftest.py  http_mocks.py  test_api_external.py  test_api_key_auth.py  test_api_middleware.py  test_builder.py  test_cli.py  test_csrd_prevalidation.py  test_csrd_session_manager.py  test_finders.py  test_http_client.py  test_internal_plugins.py  test_parsers.py  test_processor_ai_model_card.py  test_processor_csrd.py  test_schemas.py  test_toml_generation.py  test_validation_logging.py  test_validators.py
tests/bruno-tests/: Carbon-txt file with CSRD data - Local.bru  Carbon-txt file with CSRD data - Remote.bru  Carbon-txt file with No CSRD data - Local.bru  bruno.json
tests/fixtures/: aremythirdpartiesgreen.com.carbon-txt.toml  carbon-txt-test.toml  esrs-e1-efrag-2026-12-31-en.xbrl  esrs-e1-efrag-2026-12-31-en.xhtml  esrs-e2-efrag-2026-12-31-en-no-renewables.xhtml  regression.strings-or-lists.carbon.txt.toml
tests/fixtures/ai_model_cards/: badly_formatted_co2_section.md  complete.md  extra_fields.md  no_co2_eq_emissions.md  no_front_matter.md  not_markdown.html  partial.md
tests/fixtures/version_0.2/: full.toml  no_disclosure_domain.toml  no_explicit_version.toml  no_upstreams.toml
tests/fixtures/version_0.3/: full.toml  no_disclosure_domain.toml  no_last_updated.toml  no_upstreams.toml
tests/fixtures/version_0.4/: full.toml  no_disclosure_domain.toml  no_disclosure_title.toml  no_disclosure_valid_until.toml  no_last_updated.toml  no_upstreams.toml
tests/fixtures/version_0.5/: full.toml
tests/test_plugins/: process_document.py
