[project]
name = "carbon-txt"
version = "0.0.6"
description = "A command line tool containing a validator for carbon.txt files, by the Green Web Foundation"
authors = [
    { name = "Chris Adams" },
    { name = "Hannah Smith" },
    { name = "Fershad Irani" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "django-cors-headers>=4.6.0",
    "django-environ>=0.11.2",
    "django-ninja>=1.3.0",
    "dnspython>=2.7.0",
    "granian>=1.6.2",
    "httpx>=0.27.2",
    "rich>=13.9.2",
    # faster, but not yet supported by python 3.13 yet
    # "rtoml>=0.11.0",
    "typer>=0.12.5",
]

[project.scripts]
carbon-txt = "carbon_txt.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "mypy>=1.12.0",
    "pytest-django>=4.9.0",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.3",
    "sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "furo>=2024.8.6",
    "sphinx-autobuild>=2024.10.3",
    "twine>=5.1.1",
]
