[project]
name = "carbon-txt"
version = "0.0.28"
description = "A command line tool containing a validator for carbon.txt files, by the Green Web Foundation"
authors = [
    { name = "Chris Adams" },
    { name = "Hannah Smith" },
    { name = "Fershad Irani" },
    { name = "Tim Cowlishaw" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "dnspython>=2.7.0",
    "httpx>=0.27.2",
    "pluggy>=1.5.0",
    "pydantic-extra-types>=2.10.3",
    "rich>=13.9.2",
    "structlog>=25.3.0",
    "tldextract>=5.3.0",
    "tomlkit>=0.14.0",
    "typer>=0.12.5",
]

[project.optional-dependencies]
csrd = [
    "arelle-release>=2.36.3",
]
web = [
    "django-cors-headers>=4.6.0",
    "django-environ>=0.11.2",
    "django-ninja>=1.3.0",
    "django-structlog>=9.0.0",
    "granian>=1.6.2",
    "sentry-sdk[django]>=2.18.0",
]

ai_model_cards = [
    "python-frontmatter>=1.1.0",
    "mistletoe>=1.5.1",
]


all = ["carbon-txt[csrd,web,ai_model_cards]"]

[project.scripts]
carbon-txt = "carbon_txt.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "carbon-txt[all]",
    "ipdb>=0.13.13",
    "mypy>=1.12.0",
    "pytest-django>=4.9.0",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.3",
    "sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "furo>=2024.8.6",
    "sphinx-autobuild>=2024.10.3",
    "twine>=5.1.1",
    "pytest-coverage>=0.0",
    "marimo>=0.9.23",
    "pytest-httpx>=0.34.0",
    "pytest-mock>=3.14.0",
    "ansible>=11.5.0",
    "django-stubs[compatible-mypy]>=5.1.1",
]
